update: pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,14 @@
 	<name>srmsystem</name>
 	<description>SRM System for Trinity Portal</description>
 	<properties>
-		<java.version>12</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
